[gd_scene load_steps=11 format=3 uid="uid://djfc66jt8vqe2"]

[ext_resource type="Script" path="res://scenes/game/gameobjects/industrial_sink.gd" id="1"]
[ext_resource type="Resource" uid="uid://daxl5llt1hvhm" path="res://scenes/game/item/items/hard_water.tres" id="2_ljbbj"]
[ext_resource type="PackedScene" uid="uid://dtuls8f7u6ypf" path="res://assets/models/industrial_sink.glb" id="3_0jkwi"]
[ext_resource type="Material" path="res://assets/materials/industrial_sink.tres" id="4_jyxjh"]
[ext_resource type="PackedScene" uid="uid://c7qyybqvmlu5y" path="res://scenes/game/gameobjects/interactables/hint_object_interface.tscn" id="4_v61ll"]
[ext_resource type="AudioStream" uid="uid://d16xyy5ib5tur" path="res://assets/audio/sink.wav" id="6_fesvp"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(5, 1.5, 2)

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="6"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6lf13"]
_data = {
"RESET": SubResource("5"),
"fade_in": SubResource("6")
}

[node name="IndustrialSink" type="StaticBody3D" node_paths=PackedStringArray("anim_player")]
collision_layer = 3
collision_mask = 0
script = ExtResource("1")
water_item_data = ExtResource("2_ljbbj")
anim_player = NodePath("CanvasLayer/HintObjectInterface/AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 1.1)
shape = SubResource("1")

[node name="industrial_sink" parent="." instance=ExtResource("3_0jkwi")]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)

[node name="obj-sink" parent="industrial_sink" index="0"]
surface_material_override/0 = ExtResource("4_jyxjh")

[node name="SpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, 1.5, 0.7)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HintObjectInterface" parent="CanvasLayer" instance=ExtResource("4_v61ll")]

[node name="CanvasModulate" parent="CanvasLayer/HintObjectInterface" index="0"]
color = Color(1, 1, 1, 0)

[node name="TitleLabel" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="0"]
text = "industrial sink"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HintObjectInterface"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_6lf13")
}

[node name="UseSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_fesvp")
bus = &"SoundFX"

[node name="BreakSound" type="AudioStreamPlayer3D" parent="."]
bus = &"SoundFX"

[editable path="industrial_sink"]
[editable path="CanvasLayer/HintObjectInterface"]
